--- a/main_controller/main/CMakeLists.txt
+++ b/main_controller/main/CMakeLists.txt
@@ -1,10 +1,10 @@
 idf_component_register(
     SRCS
         "main.c"
-        "~/esp/posture-system/my_interfaces/server.c"
-        "~/esp/posture-system/my_interfaces/wifi_ap.c"
-        "~/esp/posture-system/my_interfaces/spiffs.c"
-        "~/esp/posture-system/my_interfaces/uart.c"
+        "https/server.c"
+        "~/esp/posture-system/my_interfaces/wifi/wifi_ap.c"
+        "~/esp/posture-system/my_interfaces/spiffs/spiffs.c"
+        "~/esp/posture-system/my_interfaces/uart/uart.c"
 
     EMBED_TXTFILES
         "./certs/cacert.pem"
@@ -12,7 +12,7 @@ idf_component_register(
 
     INCLUDE_DIRS
         "."
-        "~/esp/posture-system/my_interfaces"
+        "~/esp/posture-system/my_interfaces/"
         
     REQUIRES
         "esp_https_server"
