--- a/main_controller/main/CMakeLists.txt
+++ b/main_controller/main/CMakeLists.txt
@@ -2,9 +2,10 @@ idf_component_register(
     SRCS
         "main.c"
         "https/server.c"
-        "~/esp/posture-system/my_interfaces/wifi/wifi_ap.c"
-        "~/esp/posture-system/my_interfaces/spiffs/spiffs.c"
-        "~/esp/posture-system/my_interfaces/uart/uart.c"
+        "~/esp/posture-system/interfaces/wifi/wifi_ap.c"
+        "~/esp/posture-system/interfaces/spiffs/spiffs.c"
+        "~/esp/posture-system/interfaces/uart/uart.c"
+        "~/esp/posture-system/interfaces/ds1302/ds1302.c"
 
     EMBED_TXTFILES
         "./certs/cacert.pem"
@@ -12,7 +13,7 @@ idf_component_register(
 
     INCLUDE_DIRS
         "."
-        "~/esp/posture-system/my_interfaces/"
+        "~/esp/posture-system/interfaces/"
         
     REQUIRES
         "esp_https_server"
@@ -21,4 +22,5 @@ idf_component_register(
         "spiffs"
         "driver"
         "esp_adc"
+        "json"
 )
