--- a/main_controller/main/CMakeLists.txt
+++ b/main_controller/main/CMakeLists.txt
@@ -2,6 +2,7 @@ idf_component_register(
     SRCS
         "main.c"
         "sort.c"
+        "struct_serialization.c"
         "https/server.c"
         "~/esp/posture-system/interfaces/wifi/wifi_ap.c"
         "~/esp/posture-system/interfaces/spiffs/spiffs.c"
