--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "serializeintrin.h": "c"
+        "serializeintrin.h": "c",
+        "sdkconfig.h": "c"
     }
 }
